--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="../sanam_/img1.png" alt="Swekshya Simkhada">
+                <img src="ladies.jpeg" alt="Swekshya Simkhada">
             </div>
             <div class="about-text">
                 <h3 class="subtitle">Web Developer & Designer</h3>
