--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         <h2 class="section-title">Portfolio</h2>
         <div class="portfolio-grid">
             <div class="item">
-                <img src="../sanam_/img2.jpg" alt="Project One">
+                <img src="penseal.jpeg" alt="Project One">
                 <div class="item-overlay">
                     <h3>Project One</h3>
                     <p>A responsive e-commerce website built with HTML, CSS, and JavaScript.</p>
@@ -498,7 +498,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="../sanam_/img3.png" alt="Project Two">
+                <img src="dash.jpeg" alt="Project Two">
                 <div class="item-overlay">
                     <h3>Project Two</h3>
                     <p>Portfolio site with animations and contact form integration.</p>
